--- a/docs/local-overlay.yaml
+++ b/docs/local-overlay.yaml
@@ -9,5 +9,9 @@ description: |
 applications:
   metallb-controller:
     charm: ../build/metallb-controller.charm
+    resources:
+      metallb-controller-image: 'metallb/controller:v0.9.3'
   metallb-speaker:
     charm: ../build/metallb-speaker.charm
+    resources:
+      metallb-speaker-image: 'metallb/speaker:v0.9.3'
