--- a/charms/metallb-speaker/requirements.txt
+++ b/charms/metallb-speaker/requirements.txt
@@ -1,3 +1,20 @@
-ops
-kubernetes
-https://github.com/juju-solutions/resource-oci-image/archive/master.zip
+-i https://pypi.org/simple
+cachetools==4.1.1; python_version ~= '3.5'
+certifi==2020.6.20
+chardet==3.0.4
+git+https://github.com/canonical/operator/@e3309464a0cbd8f9467199243721c9fb9d91271d#egg=ops
+git+https://github.com/juju-solutions/resource-oci-image/@c5778285d332edf3d9a538f9d0c06154b7ec1b0b#egg=oci-image
+google-auth==1.21.3; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+idna==2.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+kubernetes==11.0.0
+oauthlib==3.1.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pyasn1-modules==0.2.8
+pyasn1==0.4.8
+python-dateutil==2.8.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pyyaml==5.3.1
+requests-oauthlib==1.3.0
+requests==2.24.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+rsa==4.6; python_version >= '3.5'
+six==1.15.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+urllib3==1.25.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
+websocket-client==0.57.0
