Update dependencies to use newly released 0.10.0 ops library from PyPI instead of github, and fix update script

--- a/charms/metallb-controller/Pipfile
+++ b/charms/metallb-controller/Pipfile
@@ -11,8 +11,8 @@ ipdb = "*"
 
 [packages]
 kubernetes = "*"
-ops = {git = "https://github.com/canonical/operator/"}
 oci-image = {git = "https://github.com/juju-solutions/resource-oci-image/"}
+ops = "*"
 
 [requires]
 python_version = "3.8"
