--- a/charms/metallb-speaker/Pipfile
+++ b/charms/metallb-speaker/Pipfile
@@ -10,9 +10,9 @@ stestr = "*"
 ipdb = "*"
 
 [packages]
-ops = {git = "https://github.com/canonical/operator/"}
 kubernetes = "*"
 oci-image = {git = "https://github.com/juju-solutions/resource-oci-image/"}
+ops = "*"
 
 [requires]
 python_version = "3.8"
