--- a/.github/workflows/metallb-workflow.yaml
+++ b/.github/workflows/metallb-workflow.yaml
@@ -91,14 +91,20 @@ jobs:
         sudo rm /etc/gitconfig
     - name: Install dependencies
       run: |
-        script/bootstrap
         sudo snap install juju --classic
         sudo snap install juju-wait --classic
+        sudo snap install charmcraft --beta
+        sudo snap install yq
     - name: Create tmp dir for artifacts
       run: mkdir -p tmp
     - name: Build charms
       run: |
-        if ! make charms; then
+        if ! charmcraft build -f charms/metallb-controller; then
+          echo Build failed, full log:
+          cat "$(ls -1t "$HOME"/snap/charmcraft/common/charmcraft-log-* | head -n1)"
+          exit 1
+        fi
+        if ! charmcraft build -f charms/metallb-speaker; then
           echo Build failed, full log:
           cat "$(ls -1t "$HOME"/snap/charmcraft/common/charmcraft-log-* | head -n1)"
           exit 1
