--- a/.github/workflows/metallb-workflow.yaml
+++ b/.github/workflows/metallb-workflow.yaml
@@ -62,92 +62,19 @@ jobs:
         cd charms/metallb-speaker
         tox -e unit
 
-  func-test-metallb:
+  integration-test-metallb:
     runs-on: ubuntu-latest
-    name: Functional test
-    timeout-minutes: 15
-    strategy:
-      matrix:
-        rbac: ["without RBAC", "with RBAC"]
+    name: Integration test
+    timeout-minutes: 30
     steps:
-    - name: Install MicroK8s with microk8s-action
-      uses: balchua/microk8s-actions@v0.1.3
-      with:
-        channel: 'latest/stable'
-        rbac: ${{ matrix.rbac == 'with RBAC' }}
-        dns: true
-        storage: true
     - name: Check out code
       uses: actions/checkout@v2
-    - name: Fix global gitconfig for confined snap
-      run: |
-        # GH automatically includes the git-lfs plugin and configures it in
-        # /etc/gitconfig.  However, the confinement of the charmcraft snap
-        # means that it can see that this file exists but cannot read it, even
-        # if the file permissions should allow it; this breaks git usage within
-        # the snap. To get around this, we move it from the global gitconfig to
-        # the user's .gitconfig file.
-        cat /etc/gitconfig >> $HOME/.gitconfig
-        sudo rm /etc/gitconfig
-    - name: Install dependencies
-      run: |
-        sudo snap install juju --classic
-        sudo snap install juju-wait --classic
-        sudo snap install charmcraft --beta
-        sudo snap install yq
-    - name: Create tmp dir for artifacts
-      run: mkdir -p tmp
-    - name: Build charms
-      run: |
-        if ! charmcraft build -f charms/metallb-controller; then
-          echo Build failed, full log:
-          cat "$(ls -1t "$HOME"/snap/charmcraft/common/charmcraft-log-* | head -n1)"
-          exit 1
-        fi
-        if ! charmcraft build -f charms/metallb-speaker; then
-          echo Build failed, full log:
-          cat "$(ls -1t "$HOME"/snap/charmcraft/common/charmcraft-log-* | head -n1)"
-          exit 1
-        fi
-    - name: Bootstrap MicroK8s with Juju
-      run: sudo juju bootstrap microk8s microk8s --config test-mode=true --model-default test-mode=true --model-default automatically-retry-hooks=false
-    - name: Deploy MetalLB
-      run: |
-        sudo juju add-model metallb-system
-        sudo juju deploy ./bundle --overlay ./docs/local-overlay.yaml
-        sudo juju config metallb-controller iprange="10.1.240.240-10.1.240.241"
-    - name: Wait for model to error without RBAC rules
-      if: ${{ matrix.rbac == 'with RBAC' }}
-      run: |
-        ! sudo /snap/bin/juju-wait -wv
-    - name: Apply RBAC rules for operator pods
-      if: ${{ matrix.rbac == 'with RBAC' }}
-      run: sudo microk8s.kubectl apply -f ./docs/rbac-permissions-operators.yaml
-    - name: Resolve failures from RBAC
-      if: ${{ matrix.rbac == 'with RBAC' }}
-      run: |
-        sudo juju resolved metallb-controller/0 || true
-        sudo juju resolved metallb-speaker/0 || true
-        timeout 1m bash -c 'while sudo juju status | grep -q "error"; do echo "Waiting for resolution..."; sleep 2; done'
-    - name: Wait for model to settle
-      run: sudo /snap/bin/juju-wait -wv
-    - name: Wait for MetalLB workload pods to be ready
-      run: |
-        timeout 2m bash -c 'while true; do status="$(sudo kubectl get pod -n metallb-system -ljuju-app -o jsonpath="{.items[*].status.phase}")"; [ "$status" == "Running Running" ] && break; echo "Waiting for MetalLB ($status)..."; sleep 2; done'
-    - name: Deploy microbot
-      run: sudo kubectl apply -f ./docs/example-microbot-lb.yaml
-    - name: Wait for microbot to be ready
-      run: |
-        timeout 2m bash -c 'while true; do status="$(sudo kubectl get pod -lapp=microbot-lb -o jsonpath="{.items[*].status.phase}")"; [ "$status" == "Running Running Running" ] && break; echo "Waiting for microbot ($status)..."; sleep 2; done'
-    - name: Wait for microbot to get LB address
-      run: |
-        timeout 2m bash -c 'while true; do ingress="$(sudo kubectl get svc microbot-lb -o jsonpath="{.status.loadBalancer.ingress}")"; [ "$ingress" != "" ] && break; echo "Waiting for microbot LB ($ingress)..."; sleep 2; done'
-    - name: Curl microbot service LB
-      run: |
-         if curl --fail --connect-timeout 10 `sudo kubectl get service/microbot-lb \
-         --no-headers | awk '{print$4}'`; then echo "curl successfull";
-         else exit 1;
-         fi
+    - name: Setup operator environment
+      uses: charmed-kubernetes/actions-operator@main
+      with:
+        provider: microk8s
+    - name: Run test
+      run: sg microk8s -c "tox -e integration"
     - name: Collect K8s Status
       if: ${{ failure() }}
       run: sudo microk8s.kubectl get all -A 2>&1 | tee tmp/microk8s-status-all.txt
