--- a/tox.ini
+++ b/tox.ini
@@ -22,6 +22,18 @@ commands =
     tox -c {toxinidir}/charms/metallb-controller -e unit
     tox -c {toxinidir}/charms/metallb-speaker -e unit
 
+
+[testenv:integration]
+setenv =
+    PYTHONBREAKPOINT=ipdb.set_trace
+deps =
+    pyyaml
+    pytest
+    pytest-operator
+    aiohttp
+    ipdb
+commands = pytest --tb native --show-capture=no --log-cli-level=INFO -s {posargs:bundle/tests}
+
 [flake8]
 ignore =
     W504 # line break after binary operator
