--- a/tox.ini
+++ b/tox.ini
@@ -26,6 +26,8 @@ commands =
 [testenv:integration]
 setenv =
     PYTHONBREAKPOINT=ipdb.set_trace
+passenv =
+    HOME
 deps =
     pyyaml
     pytest
