--- a/.github/workflows/metallb-workflow.yaml
+++ b/.github/workflows/metallb-workflow.yaml
@@ -78,7 +78,7 @@ jobs:
         provider: microk8s
     # TODO: move to actions-operator?
     - name: Alias microk8s.kubectl
-      run: snap alias microk8s.kubectl kubectl
+      run: sudo snap alias microk8s.kubectl kubectl
     # RBAC is enabled by default; TODO: ideally, this would be an option of actions-operator
     - name: Disable RBAC
       if: ${{ matrix.rbac == 'without RBAC' }}
