Fix sg syntax in workflow and custom arg passing through tox

--- a/.github/workflows/metallb-workflow.yaml
+++ b/.github/workflows/metallb-workflow.yaml
@@ -83,8 +83,8 @@ jobs:
     - name: Disable RBAC
       if: ${{ matrix.rbac == 'without RBAC' }}
       run: |
-        sg microk8s -c microk8s disable rbac
-        sg microk8s -c microk8s status --wait-ready
+        sg microk8s -c "microk8s disable rbac"
+        sg microk8s -c "microk8s status --wait-ready"
     - name: Run test
       env:
         RBAC: ${{ matrix.rbac == 'with RBAC' }}
