--- a/tox.ini
+++ b/tox.ini
@@ -34,7 +34,7 @@ deps =
     pytest-operator
     aiohttp
     ipdb
-commands = pytest --tb native --show-capture=no --log-cli-level=INFO -s {posargs:bundle/tests}
+commands = pytest --tb native --show-capture=no --log-cli-level=INFO -s bundle/tests {posargs}
 
 [flake8]
 ignore =
