--- a/.github/workflows/metallb-workflow.yaml
+++ b/.github/workflows/metallb-workflow.yaml
@@ -79,6 +79,9 @@ jobs:
     # TODO: move to actions-operator?
     - name: Alias microk8s.kubectl
       run: sudo snap alias microk8s.kubectl kubectl
+    # TODO: move to actions-operator
+    - name: Pre-init charmcraft's LXC remote
+      run: lxc remote add craft-com.ubuntu.cloud-buildd https://cloud-images.ubuntu.com/buildd/releases --protocol=simplestreams
     # RBAC is enabled by default; TODO: ideally, this would be an option of actions-operator
     - name: Disable RBAC
       if: ${{ matrix.rbac == 'without RBAC' }}
