--- a/.github/workflows/metallb-workflow.yaml
+++ b/.github/workflows/metallb-workflow.yaml
@@ -80,10 +80,10 @@ jobs:
     - name: Alias microk8s.kubectl
       run: sudo snap alias microk8s.kubectl kubectl
     # TODO: file upstream bug
-    - name: Pre-init charmcraft's LXC
-      run: |
-        lxc remote add craft-com.ubuntu.cloud-buildd https://cloud-images.ubuntu.com/buildd/releases --protocol=simplestreams
-        lxc --project charmcraft project create local:charmcraft
+    #- name: Pre-init charmcraft's LXC
+    #  run: |
+    #    lxc remote add craft-com.ubuntu.cloud-buildd https://cloud-images.ubuntu.com/buildd/releases --protocol=simplestreams
+    #    lxc --project charmcraft project create local:charmcraft
     # RBAC is enabled by default; TODO: ideally, this would be an option of actions-operator
     - name: Disable RBAC
       if: ${{ matrix.rbac == 'without RBAC' }}
