--- a/charms/metallb-controller/metadata.yaml
+++ b/charms/metallb-controller/metadata.yaml
@@ -1,7 +1,8 @@
 name: metallb-controller
 description: |
   This charm deploys MetalLB controller in a Kubernetes model, which provides 
-  a software defined load balancer. 
+  a software defined load balancer.
+docs: https://discourse.charmhub.io/t/metallb-controller-speaker/6320
 summary: |
   MetalLB offers a software network load balancing implementation that allows for
   LoadBalancing services in Kubernetes. It is a young open-source project that could
