--- a/tox.ini
+++ b/tox.ini
@@ -8,16 +8,13 @@ skip_missing_interpreters = False
 basepython = python3
 
 [testenv:lint]
-commands = flake8
-deps =
-    flake8
-    flake8-docstrings
-    flake8-import-order
-    pep8-naming
-    flake8-colors
+allowlist_externals = tox
+commands =
+    tox -c {toxinidir}/charms/metallb-controller -e lint
+    tox -c {toxinidir}/charms/metallb-speaker -e lint
 
 [testenv:unit]
-whitelist_externals = tox
+allowlist_externals = tox
 commands =
     tox -c {toxinidir}/charms/metallb-controller -e unit
     tox -c {toxinidir}/charms/metallb-speaker -e unit
