--- a/charms/metallb-speaker/tox.ini
+++ b/charms/metallb-speaker/tox.ini
@@ -35,13 +35,16 @@ omit =
     tests/*
 
 [testenv:lint]
-commands = flake8
+commands = 
+    flake8
+    black --check {toxinidir}
 deps =
     flake8
     flake8-docstrings
     flake8-import-order
     pep8-naming
     flake8-colors
+    black
 
 [flake8]
 ignore =
