--- a/.github/workflows/metallb-workflow.yaml
+++ b/.github/workflows/metallb-workflow.yaml
@@ -4,63 +4,19 @@ on:
   - pull_request
 
 jobs:
-  lint:
-    name: Check PEP8 formatting
-    runs-on: ubuntu-latest
-    steps:
-    - name: Check out code
-      uses: actions/checkout@v2
-    - name: Run Python code quality and lint action
-      uses: ricardochaves/python-lint@v1.3.0
-      with:
-        python-root-list: "charms"
-        use-flake8: true
-        use-pylint: false
-        use-pycodestyle: false
-        use-black: false
-        use-mypy: false
-        use-isort: false
-        extra-flake8-options: "--max-line-length=88 --max-complexity=10"
+  call-inclusive-naming-check:
+    name: Inclusive naming
+    uses: canonical-web-and-design/Inclusive-naming/.github/workflows/woke.yaml@main
+    with:
+      fail-on-error: "true"
 
-  unit-test-metallb-controller:
-    name: Unit tests for charm metallb-controller
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python: [3.7, 3.8]
-    steps:
-    - name: Check out code
-      uses: actions/checkout@v2
-    - name: Setup Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python }}
-    - name: Install dependencies
-      run: pip install tox
-    - name: Run unit tests with tox
-      run: |
-        cd charms/metallb-controller
-        tox -e unit
-
-  unit-test-metallb-speaker:
-    name: Unit tests for charm metallb-speaker
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python: [3.7, 3.8]
-    steps:
-    - name: Check out code
-      uses: actions/checkout@v2
-    - name: Setup Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python }}
-    - name: Install dependencies
-      run: pip install tox
-    - name: Run unit tests with tox
-      run: |
-        cd charms/metallb-speaker
-        tox -e unit
+  lint-unit:
+    name: Lint Unit
+    uses: charmed-kubernetes/workflows/.github/workflows/lint-unit.yaml@main
+    needs:
+      - call-inclusive-naming-check
+    with:
+      python: "['3.8', '3.9', '3.10']"
 
   integration-test-metallb:
     runs-on: ubuntu-latest
