adjust tox flake8 options

--- a/charms/metallb-controller/tox.ini
+++ b/charms/metallb-controller/tox.ini
@@ -48,7 +48,8 @@ deps =
 
 [flake8]
 ignore =
-    W504 # line break after binary operator
+    # line break after binary operator
+    W504,
 exclude =
     .git,
     __pycache__,
