--- a/tox.ini
+++ b/tox.ini
@@ -30,6 +30,7 @@ deps =
     pytest
     pytest-operator
     aiohttp
+    juju < 3.1
     ipdb
 commands = pytest --tb native --show-capture=no --log-cli-level=INFO -s bundle/tests {posargs}
 
