--- a/tox.ini
+++ b/tox.ini
@@ -30,19 +30,7 @@ deps =
     pytest
     pytest-operator
     aiohttp
+    juju < 3.1
     ipdb
 commands = pytest --tb native --show-capture=no --log-cli-level=INFO -s bundle/tests {posargs}
 
-[flake8]
-ignore =
-    W504 # line break after binary operator
-exclude =
-    .git,
-    __pycache__,
-    .tox,
-    mod,
-    .history,
-    build,
-    .build,
-max-line-length = 88
-max-complexity = 10
