complete ops conversion

--- a/tox.ini
+++ b/tox.ini
@@ -1,36 +1,77 @@
+# Copyright 2023 Canonical Ltd.
+# See LICENSE file for licensing details.
+
 [tox]
-skipsdist = True
+skipsdist=True
+skip_missing_interpreters = True
 envlist = lint, unit
-sitepackages = False
-skip_missing_interpreters = False
+
+[vars]
+src_path = {toxinidir}/src/
+tst_path = {toxinidir}/tests/
+;lib_path = {toxinidir}/lib/charms/operator_name_with_underscores
+all_path = {[vars]src_path} {[vars]tst_path}
 
 [testenv]
-basepython = python3
+setenv =
+  PYTHONPATH = {toxinidir}:{toxinidir}/lib:{[vars]src_path}
+  PYTHONBREAKPOINT=pdb.set_trace
+  PY_COLORS=1
+passenv =
+  PYTHONPATH
+  CHARM_BUILD_DIR
+  MODEL_SETTINGS
+
+[testenv:format]
+description = Apply coding style standards to code
+deps =
+    black
+    isort
+commands =
+    isort {[vars]all_path}
+    black {[vars]all_path}
 
 [testenv:lint]
-allowlist_externals = tox
+description = Check code against coding style standards
+deps =
+    black
+    flake8-docstrings
+    flake8-builtins
+    pyproject-flake8
+    pep8-naming
+    isort
+    codespell
 commands =
-    tox -c {toxinidir}/charms/metallb-controller -e lint
-    tox -c {toxinidir}/charms/metallb-speaker -e lint
+    # uncomment the following line if this charm owns a lib
+    # codespell {[vars]lib_path}
+    codespell {toxinidir} --skip {toxinidir}/.git --skip {toxinidir}/.tox \
+      --skip {toxinidir}/build --skip {toxinidir}/lib --skip {toxinidir}/venv \
+      --skip {toxinidir}/.mypy_cache --skip {toxinidir}/icon.svg \
+      --skip "*.yaml"
+    # pflake8 wrapper supports config from pyproject.toml
+    pflake8 {[vars]all_path} --classmethod-decorator=classmethod,validator
+    isort --check-only --diff {[vars]all_path}
+    black --check --diff {[vars]all_path}
 
 [testenv:unit]
-allowlist_externals = tox
+description = Run unit tests
+deps =
+    pytest
+    coverage[toml]
+    -r{toxinidir}/requirements.txt
 commands =
-    tox -c {toxinidir}/charms/metallb-controller -e unit
-    tox -c {toxinidir}/charms/metallb-speaker -e unit
-
+    coverage run --source={[vars]src_path} \
+        -m pytest --ignore={[vars]tst_path}integration -vv --tb native -s {posargs}
+    coverage report
 
 [testenv:integration]
-setenv =
-    PYTHONBREAKPOINT=ipdb.set_trace
-passenv =
-    HOME
+description = Run integration tests
 deps =
-    pyyaml
-    pytest
-    pytest-operator
     aiohttp
-    juju < 3.1
-    ipdb
-commands = pytest --tb native --show-capture=no --log-cli-level=INFO -s bundle/tests {posargs}
-
+    pytest
+    juju<3.0
+    pytest-operator
+    pytest-asyncio
+    -r{toxinidir}/requirements.txt
+commands =
+    pytest -v --tb native --asyncio-mode=auto --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs}
