--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,19 +1,19 @@
 name: metallb
-description: |
-  This charm deploys MetalLB controller in a Kubernetes model, which provides 
-  a software defined load balancer.
+summary: |
+  This charm deploys MetalLB in a Kubernetes model, which provides a software
+  defined load balancer.
 docs: https://discourse.charmhub.io/t/metallb/???
 issues: https://bugs.launchpad.net/operator-metallb
 source: https://github.com/charmed-kubernetes/metallb-operator
 website: https://metallb.universe.tf/
-summary: |
+description: |
   MetalLB offers a software network load balancing implementation that allows for
   LoadBalancing services in Kubernetes. It is a young open-source project that could
   be charmed to integrate it easily with the Canonical suite of projects. Upstream
   documentation can be found here : https://metallb.universe.tf/.
-  The controller is the cluster-wide controller that handles IP address assignments.
-  It must be deployed with its counterpart, metallb-speaker, which speaks the protocol
-  of your choice to make the services reachable.
+  The charm includes both the cluster-wide controller that handles IP address
+  assignments, along with the speaker DaemonSet that makes the services
+  reachable.
 series:
   - kubernetes
 tags:
