--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -60,6 +60,21 @@ jobs:
       - name: Collect K8s DaemonSet details
         if: ${{ failure() }}
         run: sudo microk8s.kubectl describe daemonsets -A 2>&1 | tee tmp/microk8s-daemonsets.txt
+      - name: Collect K8s ServiceAccount details
+        if: ${{ failure() }}
+        run: sudo microk8s.kubectl describe serviceaccounts -A 2>&1 | tee tmp/microk8s-serviceaccounts.txt
+      - name: Collect K8s Role details
+        if: ${{ failure() }}
+        run: sudo microk8s.kubectl describe roles -A 2>&1 | tee tmp/microk8s-roles.txt
+      - name: Collect K8s ClusterRole details
+        if: ${{ failure() }}
+        run: sudo microk8s.kubectl describe clusterroles 2>&1 | tee tmp/microk8s-clusterroles.txt
+      - name: Collect K8s RoleBinding details
+        if: ${{ failure() }}
+        run: sudo microk8s.kubectl describe rolebindings -A 2>&1 | tee tmp/microk8s-rolebindings.txt
+      - name: Collect K8s ClusterRoleBinding details
+        if: ${{ failure() }}
+        run: sudo microk8s.kubectl describe clusterrolebindings 2>&1 | tee tmp/microk8s-clusterrolebindings.txt
       - name: Collect K8s pod logs
         if: ${{ failure() }}
         run: |
