--- a/tox.ini
+++ b/tox.ini
@@ -69,7 +69,7 @@ description = Run integration tests
 deps =
     aiohttp
     pytest
-    juju<3.0
+    juju
     pytest-operator
     pytest-asyncio
     -r{toxinidir}/requirements.txt
