--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -39,10 +39,10 @@ jobs:
       - name: Disable RBAC If Needed
         if: ${{ matrix.rbac == 'without RBAC' }}
         run: |
-          sg microk8s -c "microk8s disable rbac"
-          sg microk8s -c "microk8s status --wait-ready"
+          sg snap_microk8s -c "microk8s disable rbac"
+          sg snap_microk8s -c "microk8s status --wait-ready"
       - name: Run test
-        run: sg microk8s -c "tox -e integration"
+        run: sg snap_microk8s -c "tox -e integration"
       - name: Setup Debug Artifact Collection
         if: ${{ failure() }}
         run: mkdir tmp
