Convert to Ops (#32)
* complete ops conversion

* ignore upstream manifests when woke checking

* Update README

* Update metadata.yaml

Co-authored-by: Adam Dyess <adam.dyess@canonical.com>

* Tweak summary and description

* Update .gitignore

Co-authored-by: Adam Dyess <adam.dyess@canonical.com>

* Update charmcraft.yaml

Co-authored-by: Adam Dyess <adam.dyess@canonical.com>

* Handle Kubernetes API errors gracefully

* Fix unit/test_update_status

* tox -e format

* Use old metadata docs link for now

* Tweak docs URL for clarity

* Add RBAC info to debug artifacts

* Test with juju 3.1

* Use microk8s strict channel

* Use snap_microk8s group

* sudo microk8s commands

* Fix metadata.series value making this a pod spec charm

* Prevent machine model deployments

---------

Co-authored-by: George Kraft <cynerva@gmail.com>
Co-authored-by: Adam Dyess <adam.dyess@canonical.com>
Co-authored-by: George Kraft <george.kraft@canonical.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,7 @@
-.history
+venv/
 build/
 *.charm
-charms/metallb-controller/.build/
-charms/metallb-speaker/.build/
-.tox
-.coverage*
-.stestr/
-__pycache__
-coverage
-cover
+.tox/
+.coverage
+__pycache__/
+*.py[cod]
