--- a/tox.ini
+++ b/tox.ini
@@ -72,6 +72,7 @@ deps =
     juju
     pytest-operator
     pytest-asyncio
+    tenacity
     -r{toxinidir}/requirements.txt
 commands =
     pytest -v --tb native --asyncio-mode=auto --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs}
